// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds-focus() should return correct css for opts: { offset: '20px' } 1`] = `
"div:focus {
  outline: #0a0aff solid 2px;
  outline-offset: 20px;
}
div:focus:not(:focus-visible) {
  outline-color: transparent;
}"
`;

exports[`pds-focus() should return correct css for opts: {} 1`] = `
"div:focus {
  outline: #0a0aff solid 2px;
  outline-offset: 2px;
}
div:focus:not(:focus-visible) {
  outline-color: transparent;
}"
`;
